<resources>
    <string name="app_name">SOS RFiD</string>
    <string name="versao">Versão: 1.0.1</string>

    <string name="textoBtConectar">Conectar  Leitor</string>
    <string name="textoEscolher">Selecione o dispositivo do RFID</string>
    <string name="textoConectar">Conectar</string>
    <string name="textoLeitura">Leitura</string>
    <string name="textoCarregar">Carregar</string>
    <string name="textoFazerInventario">Fazer Inventário</string>
    <string name="textoLer">Ler</string>
    <string name="textoLocalizar">Localizar</string>
    <string name="textoExportar">Exportar Para .CSV</string>
    <string name="textoExportarXLS">Exportar Para .XLS</string>
    <string name="textoDescricao">Adicionar Descrição</string>
    <string name="textoExpandir">Expandir Lista</string>
    <string name="textoGravacao">Gravação</string>
    <string name="textoConfiguracao">Configurações</string>
    <string name="textoInventario">Inventário</string>

    <!-- IMPORTAÇÃO TABELA -->
    <string name="textoId">id</string>
    <string name="textoNumTag">numTag</string>
    <string name="textoDataHora">dataHora</string>
    <string name="textoVezesLida">vezesLida</string>

    <!-- Lista EquipamentoInventario -->
    <string name="textoNaoEncontrada">Não encontrados</string>
    <string name="textoNaoAtribuida">Não atribuidos</string>
    <string name="textoEncontrada">Encontrados</string>

    <!-- Configurações -->
    <string name="textoBanco">Banco de Dados</string>
    <string name="textoLimparBanco">Limpar</string>

    <string name="connect_reader_menu_item_text">Conectar Leitor</string>
    <string name="change_reader_menu_item_text">Mudar Leitor</string>
    <string name="disconnect_reader_menu_item_text">Disconectar Leitor</string>

</resources>
