<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey340"
    tools:context="telas.HomeActivity">
    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logobranco" />

            <TextView
                android:textColor="@color/branco"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:textSize="28sp"
                android:text="Home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="@color/colorPrimary"
                android:textAlignment="textEnd"
                android:text="@string/versao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TableRow
                android:layout_marginTop="20dp"
                android:id="@+id/trConectar"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_bluetooth"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoConectar"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trLeitura"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_leitura"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoLeitura"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trGravacao"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_save"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoGravacao"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trInventario"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_inventario"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoInventario"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>


            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trConfiguracao"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_settings"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoConfiguracao"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
