<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey340"
    tools:context="telas.LeituraActivity">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@mipmap/ic_sos"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Leitura "
        app:titleTextColor="@color/branco">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableRow
                android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_height="30dp"
            android:layout_width="match_parent">

                <SeekBar
                    android:id="@+id/sbPotencia"
                    android:layout_width="200dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tvPotencia"
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="0 db"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

          <!--  <TableRow
                android:layout_marginTop="20dp"
                android:id="@+id/trler"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_leitura"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoLer"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>-->

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trLocalizar"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_location_searching"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoLocalizar"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trExportar"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_export"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoExportar"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trExpandir"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_expand_more"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoExpandir"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <ListView
                android:id="@+id/lvLista"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/grey60" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botaoAbrir"
            app:fabSize="auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_save_branco"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>
</RelativeLayout>
