<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey340"
    tools:context="telas.ListaInventarioActivity">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@mipmap/ic_sos"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Status Equipamentos "
        app:titleTextColor="@color/branco">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:text="Força"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <SeekBar
                    android:id="@+id/sbPotencia"
                    android:layout_width="200dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tvPotencia"
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="2 dBm"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trNaoEncontrado"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_nao_encontrado"/>

                <TextView
                    android:id="@+id/txtNaoEncontrado"
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/vermelhodesativado"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/vermelhodesativado"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoNaoEncontrada"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trNaoAtribuido"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_nao_atribuida"/>

                <TextView
                    android:id="@+id/txtNaoAtribuido"
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/amarelo_nao_atribuido"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/amarelo_nao_atribuido"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoNaoAtribuida"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/distancia"
                android:id="@+id/trEncontrado"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_width="@dimen/tamanhoIcon"
                    android:layout_height="@dimen/tamanhoIcon"
                    android:src="@drawable/ic_encontrada_atribuida"/>

                <TextView
                    android:id="@+id/txtEncontrado"
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="1"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:paddingLeft="@dimen/distancia"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/tamanhoTextoHome"
                    android:text="@string/textoEncontrada"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
            </TableRow>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabProsseguir"
            app:fabSize="auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_save_branco"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>
</RelativeLayout>
